feat(config): separate socket configs into .env

--- a/centrifugo/config.json
+++ b/centrifugo/config.json
@@ -8,9 +8,9 @@
       "presence": true,
       "join_leave": true,
       "history_size": 10,
-      "history_lifetime": 30
+      "history_lifetime": 30,
+      "recover": true
     }
   ],
   "log_level": "debug"
 }
-    
